--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,26 @@
 
 <div class ="crusty_crab">
 <p>Crabby Patty</p>
-<img src="https://i.ytimg.com/vi/k5e1HPeusiA/hqdefault.jpg" alt="crabby patty" width="250" height="250">
+<p> Restraunt: Crusty Crabs</P>
+<img src="https://i.ytimg.com/vi/k5e1HPeusiA/hqdefault.jpg" alt="crabby patty" width="300" height="250">
 </div>
+
+<div class ="Ramen">
+<p>Ramen</p>
+<p> Restraunt: Ichiraku Ramen</P>
+<img src="https://a.storyblok.com/f/178900/638x358/399291d251/8ad71330b958165e3b735054f4ff20211498090822_full.jpg" alt="crabby patty" width="300" height="250">
+</div>
+
+   </body>
+   </html>
+
+   <div class ="Pizza">
+<p>Pizza</p>
+<p> Luigi's Pizzaria</P>
+<img src="https://www.foodandwine.com/thmb/iJw7N_NfcPpd-EB8rpYbzrkSFIM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/tomato-mozzarella-pizza-FT-RECIPE0725-e7244e979c504188a049623668c15b2e.jpg" alt="crabby patty" width="300" height="250">
+</div>
+
+<br>
+<a href="home.php">Return to home</a>
    </body>
    </html>
